# v3

EC1-edit/: CMakeLists.txt  README.md  rebuild.sh  rebuild_gcc.sh
EC1-edit/Notes/: 2025 notes.txt  team meeting.txt
EC1-edit/bsp/: CMakeLists.txt  Makefile  STM32G0B1RCTx_FLASH.ld  configuration.ioc
EC1-edit/cmake/: binutils-arm-none-eabi.cmake  clang-arm-none-eabi.cmake  gdb-helper.cmake  gnu-arm-none-eabi.cmake
EC1-edit/inc/callbacks/: buttons.hpp
EC1-edit/inc/commands/: base.hpp  config.hpp  cycler.hpp  heater.hpp  syringe.hpp  thermocouple.hpp  valve.hpp  warnings.hpp
EC1-edit/inc/console/: commands.hpp
EC1-edit/inc/defines/: commands.hpp  gpio.hpp  status.hpp  warnings.hpp
EC1-edit/inc/drivers/: adc.hpp  dac.hpp  display.hpp  gpio.hpp  i2c.hpp  rtc.hpp  stepper.hpp  thermocouple.hpp
EC1-edit/inc/helpers/: buffer_printer.hpp  button_filter.hpp  cmsis_os.hpp
EC1-edit/inc/ui/: hidden_code.hpp  hidden_code_items.inc  menu.hpp  menu_items.inc
EC1-edit/scripts/: cubemx.py  cycle.py  hmi_schema.json  includes.py  menu.py  prime.py
EC1-edit/src/callbacks/: buttons.cpp  gpio.cpp
EC1-edit/src/console/commands/: heater.cpp  print_adc.cpp  print_datetime.cpp  rtc.cpp  syringe.cpp  task_list.cpp  thermocouple.cpp  valve.cpp
EC1-edit/src/drivers/: adc.cpp  gpio.cpp
EC1-edit/src/tasks/: config.cpp  console.cpp  cycler.cpp  ui.cpp
EC1-edit/src/tasks/controllers/: heater.cpp  syringe.cpp  thermocouple.cpp  valve.cpp
